# scence_object_matching

./: CMakeLists.txt  package.xml
config/: scene_object_matching.yaml
data/: THE_orange_ball.pcd  ball_ds_001.pcd  ball_ds_006.pcd  ball_ds_007.pcd  ball_ds_0085.pcd  ds_ball_from_scene_006.pcd  ds_ball_from_scene_008.pcd  orange_ball1.pcd  orange_ball_downsampled.pcd  orange_ball_downsampled1.pcd
launch/: object_recognition.launch
notes/: downsampled_data_points  useful_things
src/: scene_object_matching.cpp
